# rust-cli-workspace-template

./: .gitignore  catalog-info.yaml  template.yaml
template/: Makefile  catalog-info.yaml  mkdocs.yaml
template/.github/workflows/: pr-checks.yaml
template/cli/: Cargo.toml  Dockerfile
template/cli/src/: main.rs
template/lib/: Cargo.toml
template/lib/src/: errors.rs  lib.rs
