[package]
name = "${{values.name | dump}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "3"
clap = { version = "3", features = ["derive"] }
lib = { path = "../lib" }

[features]
default = [ "fancy-debug" ] # We enable debug mode by default and disable it for log processor
fancy-debug = ["miette/fancy"] # This can be useful for debugging by improving output for console
